1.1.0B1: Added back the Filing Index. Also added the Ledger Linking tool and Index Range upgrades